--- a/MedioClinic/_ViewStart.cshtml
+++ b/MedioClinic/_ViewStart.cshtml
@@ -1,3 +1,7 @@
-﻿@{
+﻿@*The _ViewStart.cshtml file is called by convention each time a ViewResult is returned by an action method.
+You'll use it to register your future layout file.You'll also place the file in the root, to broaden the reach to future areas.*@
+
+
+@{
     Layout = "_Layout";
 }
