Create the bottom menu container

--- a/MedioClinic/Views/Shared/Components/Navigation/Bottom.cshtml
+++ b/MedioClinic/Views/Shared/Components/Navigation/Bottom.cshtml
@@ -1,4 +1,6 @@
-﻿@model Business.Models.NavigationItem
+﻿@using Microsoft.Extensions.Localization
+
+@model Business.Models.NavigationItem
 @inject IStringLocalizer<SharedResource> StringLocalizer
 @inject Business.Repositories.INavigationRepository NavigationRepository
 
