--- a/MedioClinic/Views/Shared/Components/CultureSwitch/Default.cshtml
+++ b/MedioClinic/Views/Shared/Components/CultureSwitch/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model (string CultureSwitchId, Dictionary<XperienceAdapter.Models.SiteCulture, string> Variants)
+﻿@using MedioClinic.Components.ViewComponents
+@model (string CultureSwitchId, Dictionary<XperienceAdapter.Models.SiteCulture, string> Variants)
 
 @{
     var triggerViewName = "_DropdownTrigger";
@@ -10,7 +11,6 @@
     if (Model.Variants?.Any() == true)
     {
         var titleIcon = @"<i class=""material-icons"">language</i>";
-
         <partial name="@triggerViewName" model="@(Model.CultureSwitchId, titleIcon, orderedItems)" />
     }
 }
